[build-system]
requires = ['setuptools>=40.8.0']
build-backend = 'setuptools.build_meta'

[tool.poetry]
name = "django-mqtt-framework"
version = "0.0.1"
description = ""
authors = ["Jourdan Rodrigues <thiagojourdan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
django = "*"
paho-mqtt = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
