[metadata]
name = django-mqtt-framework
version = 0.0.1
description = An MQTT framework to be used with Django.
long_description = file: README.rst
# url = https://www.example.com/
author = Jourdan Rodrigues
author_email = thiagojourdan@gmail.com
# license = BSD-3-Clause
classifiers =
  Environment :: Web Environment
  Framework :: Django
  Framework :: Django :: 5.0
  Intended Audience :: Developers
  License :: OSI Approved :: BSD License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  Topic :: Internet :: WWW/HTTP
  Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.10
install_requires =
  Django >= 5.0
